--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: '14.18'
       - run: mv .env.example .env
-      - run: npm i
+      - run: npm ci
       - run: npm run check-types
       - run: npm run format
       - run: npm run check-format
